--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,12 @@ body {
 .content-form {
   display: flex;
   flex-direction: column;
-  font-family: Inter, sans-serif;
+  font-family: 'Inter Tight', sans-serif;
   margin: 16px;
 }
 
 .content-form input {
-  font-family: Inter;
+  font-family: 'Inter Tight';
   border: 2px solid #333333;
   border-radius: 6px;
   padding: 8px;
